--- a/Piko/Form1.resx
+++ b/Piko/Form1.resx
@@ -137,20 +137,12 @@
   <metadata name="timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>219, 17</value>
   </metadata>
-  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACYAAAAtCAYAAADC+hltAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAAAHQSURBVFhH7dfN
-        KwRhHMDx9U5ECSVRChFJLnKSg6ODlOIuDg4ODkQp/gDFwUUpVwflJgel3JDcxI2QSJT31+9v82zb7jPt
-        jplnZg7zrU/bFju/ntmdmScSFma2jL/XwJSLbuxG3wWgbPRhB+/4ga/JQJ3YxidkIMWX5JT1YANviB/I
-        l8Ey0Y5NWA2keJKcsg6s4QW6QRIZrxlyyp6gG8CKkbLQgmXYHUhxvSbIKbvHN3QHTYcryZW6FvN4gJOB
-        FMfVYwHXcGMg5V/JClVgArdwcyDFdjWYxjlMDKSkXTHGcIkv6D7MTSkrxyhO4cVAimX5GMEZPqD7Z5OS
-        KkE/9pF4x/dSLFmhQRxAPRP5KZZ8j+SLbfKXZkcseQJoxByuoPtjLyUlz0zVWMIN/FpBy2TAOsxAfple
-        D5gyGbASk7iAV9cyW1VhCscwfW2zndzAyzCME5haQUeVYhxHeIXuAP/lOFlBGXAAcrdw6xS7WhGGcIhn
-        6A6YLiPJ/bYXW0h3u5bIaAWQHfceZAXtXAs9qRAy4Dpks6IbJJGn5UF25LIBTrWCvpSDLqziDroBfU2e
-        aFqxiEfEDxiI5H7chhWo/Wmgkot1A2aj7wKYDBgWZrBI5BfdWoHDK9F5XgAAAABJRU5ErkJggg==
-</value>
-  </data>
+  <metadata name="timer3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>306, 17</value>
+  </metadata>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>942, 17</value>
+  </metadata>
   <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACYAAAAtCAYAAADC+hltAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -166,12 +158,20 @@
         v+qUyig6kLlvsZkr1Egj6SeX2wWnlYHDv5c+TAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="timer3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>306, 17</value>
-  </metadata>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>273, 56</value>
-  </metadata>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACYAAAAtCAYAAADC+hltAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAAAHQSURBVFhH7dfN
+        KwRhHMDx9U5ECSVRChFJLnKSg6ODlOIuDg4ODkQp/gDFwUUpVwflJgel3JDcxI2QSJT31+9v82zb7jPt
+        jplnZg7zrU/bFju/ntmdmScSFma2jL/XwJSLbuxG3wWgbPRhB+/4ga/JQJ3YxidkIMWX5JT1YANviB/I
+        l8Ey0Y5NWA2keJKcsg6s4QW6QRIZrxlyyp6gG8CKkbLQgmXYHUhxvSbIKbvHN3QHTYcryZW6FvN4gJOB
+        FMfVYwHXcGMg5V/JClVgArdwcyDFdjWYxjlMDKSkXTHGcIkv6D7MTSkrxyhO4cVAimX5GMEZPqD7Z5OS
+        KkE/9pF4x/dSLFmhQRxAPRP5KZZ8j+SLbfKXZkcseQJoxByuoPtjLyUlz0zVWMIN/FpBy2TAOsxAfple
+        D5gyGbASk7iAV9cyW1VhCscwfW2zndzAyzCME5haQUeVYhxHeIXuAP/lOFlBGXAAcrdw6xS7WhGGcIhn
+        6A6YLiPJ/bYXW0h3u5bIaAWQHfceZAXtXAs9qRAy4Dpks6IbJJGn5UF25LIBTrWCvpSDLqziDroBfU2e
+        aFqxiEfEDxiI5H7chhWo/Wmgkot1A2aj7wKYDBgWZrBI5BfdWoHDK9F5XgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="timer4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>393, 17</value>
   </metadata>
@@ -179,10 +179,16 @@
     <value>480, 17</value>
   </metadata>
   <metadata name="timer6.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 56</value>
+    <value>686, 17</value>
   </metadata>
   <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>104, 56</value>
+    <value>773, 17</value>
+  </metadata>
+  <metadata name="printDocument1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
+  <metadata name="printDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>567, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>71</value>
